=head1 NAME

Sys::SigAction::Changes - List of significant changes

=head1 CHANGES

Revision history for Sys::SigAction.

=head2 Changes in Sys::SigAction 0.23  10 September 2016

Responding to Bug: L<https://rt.cpan.org/Public/Bug/Display.html?id=105091>

Renamed t/nested.t to t/inline_nested.t (don't execute this on arm platforms
arm perl port appear to be at fault.  See t/inline_nested.t

create new tests:

   t/alternatives.t
   t/recursive_nested.t

Allow arm platforms, but skip t/inline_nested.t with a warning
on arm platforms.

Desupport perl 5.5 (that was soooo long ago > 12 years)... This
allows me to turn on use warnings everywhere: Prompted by the Kwalitee 
folks who noticed it was not used. 

Set MIN_PERL_VERSION => 5.6.0 in Makefile.PL. 

Referenced the new github repository in the generated META.* files:
L<https://github.com/labaxter/sys-sigaction>

=head2 Changes in Sys::SigAction 0.22  July 31 2016

Fix lack of interpolation in Makefile.PL for unsupported MSWin OS.


=head2 Changes in Sys::SigAction 0.21  20 Nov 2013

Remove erroneous note at the end of the POD related to references to
this module in DBD:Oracle.  In reality the reference was in DBI, and it
is still there.

Close pod error bug (which referred to the above paragraph) submitted
by the Debian Packaging team.

=head2 Changes in Sys::SigAction 0.20  4 Aug 2013

Even if C<Time::HiRes::ualarm()> exists, it may not necessarily
work. (There were way too many broken smoke tests which might have been
the result of this). One reason for this may also bave been that the test
was looking for too small an interval in the sub-second timeout tests.  On busy 
systems, this may also have been causing tests to fail.

This version got rid of the attempt at tracking broken environments in timeout.t 
(the hash structure mentioned in the previous change).

The sub-second timer tests now set a timeout at 0.1 seconds, and check
for a delta time that is less than 0.8 seconds. Proving that they completed