@@ -19,16 +19,24 @@ To install this module type the following:
 This module requires these other modules and libraries:
 
   Test::More
-  posix( sigactioni, ceil )
+  posix( sigaction, ceil )
 
-This module will use the follow module if present:
+This module will use the following module if present:
 
   Time::HiRes( ualarm) for fractional second timeouts. 
 
 =head1 COPYRIGHT AND LICENCE
 
-Copyright (c) 2004-2016 Lincoln A. Baxter
+Copyright (c) 2004-2024 Lincoln A. Baxter
 
 You may distribute under the terms of either the GNU General Public
 License or the Artistic License, as specified in the Perl README file,
+
+=head1 CO-MAINTAINER WANTED
+
+I'm not programming in perl professionally any more, and I have not for
+some time. I would welcome a co-maintainer for this module. 
+
+Contact me if interested.
+
 
